--- a/index.html
+++ b/index.html
@@ -11,5 +11,17 @@
         <h3>My first website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem minima modi soluta perspiciatis aliquid error, eveniet quae quibusdam magnam rem corporis, tempore ullam corrupti repellendus natus odio sequi obcaecati eum?</p>
     </div>
+    <div>
+        <h3>My secon blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem minima modi soluta perspiciatis aliquid error,
+            eveniet quae quibusdam magnam rem corporis, tempore ullam corrupti repellendus natus odio sequi obcaecati eum?
+        </p>
+    </div>
+    <div>
+        <h3>My third blog </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem minima modi soluta perspiciatis aliquid error,
+            eveniet quae quibusdam magnam rem corporis, tempore ullam corrupti repellendus natus odio sequi obcaecati eum?
+        </p>
+    </div>
 </body>
 </html>
