kim image commit

--- a/index.html
+++ b/index.html
@@ -23,5 +23,18 @@
             eveniet quae quibusdam magnam rem corporis, tempore ullam corrupti repellendus natus odio sequi obcaecati eum?
         </p>
     </div>
+
+    <div>
+        <h3>You to push incremental</h3>
+        <ul>
+            <li>git add</li>
+            <li>git commit</li>
+            <li>git push</li>
+        </ul>
+    </div>
+    <div>
+        <h3>Kim pare dim everyday</h3>
+        <img src="images/images.jpg" alt="">
+    </div>
 </body>
 </html>
